put config file in build/oe and reference it from there

--- a/local.conf
+++ b/local.conf
@@ -155,4 +155,4 @@ LICENSE_FLAGS_WHITELIST = "commercial_broadcom-wifi"
 LICENSE_FLAGS_WHITELIST += "commercial_microcode-ctl"
 
 
-require build/generated.conf
+require generated.conf
