go back to the upstream meta-selinux

--- a/xenclient-oe/conf/bblayers.conf
+++ b/xenclient-oe/conf/bblayers.conf
@@ -11,7 +11,7 @@ BBLAYERS ?= " \
   ${TOPDIR}/repos/meta-openembedded/meta-oe \
   ${TOPDIR}/repos/meta-openembedded/meta-gnome \
   ${TOPDIR}/repos/meta-java \
-  ${TOPDIR}/../../meta-selinux \
+  ${TOPDIR}/repos/meta-selinux \
   "
 
  
