go to revision 8e952c7da126d30f4aecb33abd3ef9252785cb40

--- a/meta-selinux/conf/layer.conf
+++ b/meta-selinux/conf/layer.conf
@@ -2,8 +2,7 @@
 BBPATH .= ":${LAYERDIR}"
 
 # We have a packages directory, add to BBFILES
-BBFILES += "${LAYERDIR}/recipes-*/*/*.bb \
-            ${LAYERDIR}/recipes-*/*/*.bbappend"
+BBFILES += "${LAYERDIR}/recipes-*/*/*.bb"
 
 BBFILE_COLLECTIONS += "selinux"
 BBFILE_PATTERN_selinux = "^${LAYERDIR}/"
@@ -12,5 +11,3 @@ BBFILE_PRIORITY_selinux = "5"
 # This should only be incremented on significant changes that will
 # cause compatibility issues with other layers
 LAYERVERSION_selinux = "1"
-
-LAYERDEPENDS_selinux = "core"
