--- a/meta-selinux/conf/distro/oe-selinux.conf
+++ b/meta-selinux/conf/distro/oe-selinux.conf
@@ -1,4 +1,4 @@
 DISTRO = "oe-selinux"
 DISTROOVERRIDES .= ":selinux"
 
-DISTRO_FEATURES_append = " acl xattr pam selinux compressed_policy"
+DISTRO_FEATURES_append = " acl xattr pam selinux"
