list OPENXT_MIRROR

--- a/local.conf
+++ b/local.conf
@@ -154,5 +154,5 @@ PARALLEL_MAKE_pn-shared-mime-info-native = "-j 1"
 LICENSE_FLAGS_WHITELIST = "commercial_broadcom-wifi"
 LICENSE_FLAGS_WHITELIST += "commercial_microcode-ctl"
 
-
+OPENXT_MIRROR="http://openxt.xci-test.com/mirror"
 require generated.conf
