leaving OPENXT_GIT_MIRROR undefined is dangerous due to a broken test in xenclient-oe/xenclient/classes/xenclient-repo.bbclass

--- a/local.conf
+++ b/local.conf
@@ -155,4 +155,5 @@ LICENSE_FLAGS_WHITELIST = "commercial_broadcom-wifi"
 LICENSE_FLAGS_WHITELIST += "commercial_microcode-ctl"
 
 OPENXT_MIRROR="http://openxt.xci-test.com/mirror"
+OPENXT_GIT_MIRROR="XXXdisabled"
 require generated.conf
